--- a/style.css
+++ b/style.css
@@ -287,3 +287,83 @@ nav ul li a:hover::after {
 .btn:hover {
     background: #ff004f;
 }
+
+
+/* contact css  */
+
+.contact-social {
+    flex-basis: 35%;
+}
+
+.contact-email {
+    flex-basis: 60%;
+}
+
+.contact-social p {
+    margin-top: 30px;
+}
+
+.contact-social p i {
+    color: #ff004f;
+    margin-right: 15px;
+    font-size: 25px;
+}
+
+.social-icon {
+    margin-top: 30PX;
+}
+
+.social-icon a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+
+.social-icon a:hover {
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+
+.btn.btn-resume {
+    display: inline-block;
+    background: #ff004f;
+}
+
+.contact-email form {
+    width: 100%;
+}
+
+form input, form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+form .btn{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px;
+    background: #262626;
+    font-weight: 300;
+    margin-top: 20px;
+}
+
+.copyright i{
+    color: #ff004f;
+}
