--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     margin-right: auto;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #080808;
     color: #fff;
@@ -16,7 +20,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url("images/background.png");
+    background-image: url("images/deskUser.png");
     background-size: cover;
     position: center;
 }
@@ -336,7 +340,8 @@ nav ul li a:hover::after {
     width: 100%;
 }
 
-form input, form textarea {
+form input,
+form textarea {
     width: 100%;
     border: 0;
     outline: none;
@@ -348,14 +353,14 @@ form input, form textarea {
     border-radius: 6px;
 }
 
-form .btn{
+form .btn {
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
 }
 
-.copyright{
+.copyright {
     width: 100%;
     text-align: center;
     padding: 25px;
@@ -364,6 +369,88 @@ form .btn{
     margin-top: 20px;
 }
 
-.copyright i{
+.copyright i {
     color: #ff004f;
+}
+
+
+/* Responsive Design  */
+
+nav .fas {
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    #header {
+        background-image: url('images/mobileUser.png');
+    }
+
+    .header-text {
+        margin-top: 100%;
+        font-size: 16px;
+    }
+
+    .header-text h1 {
+        font-size: 30px;
+    }
+
+    nav .fas {
+        display: block;
+        font-size: 25px;
+    }
+
+    nav ul {
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 20px;
+    }
+
+    nav ul .fas {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title {
+        font-size: 40px;
+    }
+
+    .about-col-1,
+    .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        margin-bottom: 30px;
+    }
+
+    .about-col-2 {
+        font-size: 14px;
+    }
+
+    .tab-links {
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-social,
+    .contact-email {
+        flex-basis: 100%;
+    }
+
+    .copyright {
+        font-size: 14px;
+    }
 }
