--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ form .btn {
     width: 100%;
     text-align: center;
     padding: 25px;
-    background: #262626;
+    /* background: #262626; */
     font-weight: 300;
     margin-top: 20px;
 }
